inline, inline-block, block

--- a/index.html
+++ b/index.html
@@ -4,32 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Box Model</title>
+    <title>Inline Example</title>
     <style>
-      body,
-      html {
-        padding: 0;
-        margin: 0;
-        background-color: green;
-        height: 100%;
-      }
       .box {
-        background-color: yellow;
-        width: 50%;
-        height: 50%;
-        padding: 20px 10px;
-      }
-      .inside-box {
-        background-color: blue;
-        width: 50%;
-        height: 50%;
-        border: 5px dashed red;
+        background-color: red;
+        width: 200px;
+        height: 200px;
+        border: 2px solid black;
+        display: inline;
       }
     </style>
   </head>
   <body>
-    <div class="box">
-      <div class="inside-box"></div>
-    </div>
+    <span class="box">1</span>
+    <span class="box">1</span>
+    <span class="box">1</span>
   </body>
 </html>
