--- a/index.html
+++ b/index.html
@@ -4,44 +4,41 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Flex</title>
+    <title>Selectors and Pseudo Selectors</title>
     <style>
-      html,
-      body {
-        height: 100%;
+      input[required="required"] {
+        background-color: blue;
       }
-      .father {
-        display: flex;
-        justify-content: space-between;
-        align-items: flex-end;
-        height: 100%;
-        flex-direction: row;
-        flex-wrap: nowrap;
+
+      .container > .box {
+        background-color: white;
       }
       .box {
-        background-color: red;
-        width: 200px;
-        height: 200px;
+        background-color: green;
+        display: block;
+        height: 100px;
         border: 1px solid black;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        color: white;
+      }
+      .child {
+        width: 100px;
       }
     </style>
   </head>
   <body>
-    <div class="father">
-      <div class="box">1</div>
-      <div class="box">2</div>
-      <div class="box">3</div>
-      <div class="box">4</div>
-      <div class="box">5</div>
-      <div class="box">6</div>
-      <div class="box">7</div>
-      <div class="box">8</div>
-      <div class="box">9</div>
-      <div class="box">10</div>
+    <div class="container">
+      <div class="box">
+        <div class="box child"></div>
+      </div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box">
+        <input type="password" required="required" />
+        <input type="submit" required="required" />
+      </div>
     </div>
   </body>
 </html>
