--- a/index.html
+++ b/index.html
@@ -4,41 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Selectors and Pseudo Selectors</title>
+    <title>CSS States</title>
     <style>
-      input[required="required"] {
-        background-color: blue;
-      }
-
-      .container > .box {
-        background-color: white;
-      }
-      .box {
-        background-color: green;
-        display: block;
-        height: 100px;
-        border: 1px solid black;
-      }
-      .child {
-        width: 100px;
+        .box{
+            background-color: red;
+            font-size: 40px;
+        }
+        .box:hover{
+            background-color: pink;
+        }
+        .box:active{
+            background-color: green;
+        }
+        .box:focus{
+            background-color: blue;
+        }
       }
     </style>
   </head>
   <body>
-    <div class="container">
-      <div class="box">
-        <div class="box child"></div>
-      </div>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box">
-        <input type="password" required="required" />
-        <input type="submit" required="required" />
-      </div>
-    </div>
+    <textarea class="box">lalalalala</textarea>
   </body>
 </html>
