--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Transistion</title>
+    <title>Transformation</title>
     <style>
       .box {
+        width: 500px;
+        height: 500px;
         background-color: red;
-        color: white;
-        transition: background-color 0.5s ease-in-out;
+        transition: transform 0.5s ease-in-out;
       }
-      .box:active {
-        background-color: blue;
-        color: green;
+      .box:hover {
+        transform: rotate(1turn) scale(0.5, 0.5);
       }
     </style>
   </head>
   <body>
-    <span class="box">text</span>
+    <div class="box"></div>
   </body>
 </html>
